feat: se hace unnget para obtener el id de la inscripcion del inscrito
